# chromahash

./: .gitignore  .mise.toml  AGENTS.md  ANALYSIS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  justfile  lefthook.yml
.github/workflows/: ci-comparison.yml  ci-csharp.yml  ci-go.yml  ci-kotlin.yml  ci-python.yml  ci-rust.yml  ci-swift.yml  ci-typescript.yml
csharp/: Chromahash.sln
go/: aspect.go  bitpack.go  chromahash.go  chromahash_test.go  color.go  constants.go  dct.go  go.mod  math_utils.go  mulaw.go  transfer.go
kotlin/: build.gradle.kts  settings.gradle.kts
python/: pyproject.toml
python/chromahash/: __init__.py  _aspect.py  _bitpack.py  _color.py  _constants.py  _dct.py  _decode.py  _encode.py  _math_utils.py  _mulaw.py  _transfer.py  encode_stdin.py
python/tests/: test_chromahash.py
rust/: Cargo.toml
rust/examples/: encode_stdin.rs
rust/src/: aspect.rs  bitpack.rs  color.rs  constants.rs  dct.rs  decode.rs  encode.rs  lib.rs  math_utils.rs  mulaw.rs  test_vectors.rs  transfer.rs
spec/: README.md  REVISION.md  constants.py  scan_order.py  validate.py
spec/test-vectors/: README.md  integration-decode.json  integration-encode.json  unit-aspect.json  unit-bitpack.json  unit-cbrt.json  unit-color.json  unit-dct.json  unit-mulaw.json  unit-softgamutclamp.json
swift/: Package.swift
tools/benchmark/: benchmark.py  pyproject.toml
tools/comparison/: biome.json  package.json  pnpm-lock.yaml
typescript/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: encode-stdin.ts  index.test.ts  index.ts  internals.ts
(+58 files in other folders)
